--- a/VIZBOR/vizbor.html
+++ b/VIZBOR/vizbor.html
@@ -7,8 +7,7 @@
     <body>
         <h1><strong>Юрий Визбор</strong></h1>
         <h2><strong>Вечно студент</strong></h2>
-        <p><a href="читать сначала</p>
-        <p>читать с последнего абзаца</p>
+        <p><a href="https://preview.c9users.io/dashashaknova/fd1/VIZBOR/vechno_student.html?#start target="_self">читать сначала<a/></p>
+        <p><a href="vechno_student.html#end" target="_blank">читать с последнего абзаца</a></p>
     </body>
-    
 </html>
