--- a/triangle/10.11a/tabl.html
+++ b/triangle/10.11a/tabl.html
@@ -1,9 +1,42 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> </title>
+        <title>tabl</title>
+        <meta charset="utf-8">
     </head>
     <body>
+        <table border=1>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td><div style="margin-left: 2cm">2</div></td>
+                <td><div style="margin-left: -2cm">3</div></td>
+            </tr>
+            <tr>
+                <td><div style="margin-left: 3cm">1</div></td>
+                <td><div style="margin-left:-2cm">2</div></td>
+                <td>3</td>
+            </tr>
+            <tr>
+                <td><div style="margin-left: 4cm">1</div></td>
+                <td><div style="margin-left: -2cm">2</div></td>
+                <td><div style="margin-left: -4cm">3</div></td>
+            </tr>
+            <tr>
+                <td><div style="margin-left: 4cm">1</div></td>
+                <td>2</td>
+                <td><div style="margin-left: -4cm">3</div></td>
+            </tr>
+            <tr>
+                <td><div style="margin-left: 4cm">1</div></td>
+                <td><div style="margin-left: -1cm">2</div></td>
+                <td><div style="margin-left: -4cm">3</div></td>
+            </tr>
+        </table>
 
     </body>
 </html>
