--- a/triangle/10.11a/frame/index.html
+++ b/triangle/10.11a/frame/index.html
@@ -4,63 +4,12 @@
 <head>
     <title>frame</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="triangle/10.11a/frame/index.html">
+    <link rel="stylesheet" href="10.11a/frame/frame.css">
 </head>
 
 <body>
-    <img src="https://raw.githubusercontent.com/antonkulakov-it/library/master/ramka.png">
-    <div style="background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/ramka.png');
-                background-repeat: no-repeat;
-                background-position: 0px 0px;
-                width: 100px; height: 100px;
-                border: solid red 1px">
-    </div><br>
-    <div style="background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/ramka.png');
-                background-repeat: no-repeat;
-                background-position: 0px -345px;
-                width: 100px; height: 100px;
-                border: solid red 1px">
-    </div><br>
-    <div style="background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/ramka.png');
-                background-repeat: no-repeat;
-                background-position: -255px 0px;
-                width: 100px; height: 100px;
-                border: solid red 1px">
-    </div><br>
-    <div style="background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/ramka.png');
-                background-repeat: no-repeat;
-                background-position: -255px -345px;
-                width: 100px; height: 100px;
-                border: solid red 1px">
-    </div><br>
-    <div style="background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/ramka.png');
-                background-repeat: no-repeat;
-                background-position: -100px 0px;
-                width: 150px; height: 100px;
-                border: solid red 1px">
-    </div><br>
-    <div style="background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/ramka.png');
-                background-repeat: no-repeat;
-                background-position: 0px -100px;
-                width: 100px; height: 150px;
-                border: solid red 1px">
-    </div><br>
-    <div style="background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/ramka.png');
-                background-repeat: no-repeat;
-                background-position: -100px -345px;
-                width: 150px; height: 100px;
-                border: solid red 1px">
-    </div><br>
-    <div style="background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/ramka.png');
-                background-repeat: no-repeat;
-                background-position: -255px -150px;
-                width: 100px; height: 150px;
-                border: solid red 1px">
-    </div><br>
-    <table>
-    
-
-        <tr>
+  <table>
+    <tr>
             <td>
                 <div style="background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/ramka.png');
                 background-repeat: no-repeat;
@@ -73,7 +22,9 @@
                 background-repeat: repeat-x;
                 background-position: -100px 0px;
                 overflow: hidden;
-                width: 150px; height: 100px;"></div> 
+                width: 150px; height: 100px;">
+                <div class="top"></div>
+                </div> 
             </td>
             <td><div style="background-image: url('https://raw.githubusercontent.com/antonkulakov-it/library/master/ramka.png'); 
             background-repeat: no-repeat;
@@ -114,9 +65,8 @@
                 width: 100px; height: 100px;"></div>
                 </td>
             </tr>
+        </div>
     </table>    
-    </div>
-
 </body>
 
 </html>
