--- a/13.11a/2/index.html
+++ b/13.11a/2/index.html
@@ -33,7 +33,7 @@
             <div class="left">3</div>
         </div>
         <div class="row">
-            <div class="">1</div>
+            <div>1</div>
             <div class="right">2</div>
             <div class="left">3</div>
         </div>
