--- a/13.11a/3h/assets/chess2.html
+++ b/13.11a/3h/assets/chess2.html
@@ -14,16 +14,10 @@
             <td>A</td>
         </tr>
         <tr>
-            <td class="td"></td>
+            <td class="td"><div class="rook"></div></td>
         </tr>
         <tr>
-            <td class="td2"></td>
-        </tr>
-        <tr>
-            <td class="td"></td>
-        </tr>
-        <tr>
-            <td class="td2"></td>
+            <td class="td2"><div class="pawn"></div></td>
         </tr>
         <tr>
             <td class="td"></td>
@@ -36,6 +30,12 @@
         </tr>
         <tr>
             <td class="td2"></td>
+        </tr>
+        <tr>
+            <td class="td"><div class="pawn1"></div></td>
+        </tr>
+        <tr>
+            <td class="td2"><div class="rook1"></div></td>
         </tr>
         <tr>
             <td>A</td>
@@ -46,16 +46,10 @@
             <td>B</td>
         </tr>
         <tr>
-            <td class="td2"></td>
+            <td class="td2"><div class="horse"></div></td>
         </tr>
         <tr>
-            <td class="td"></td>
-        </tr>
-        <tr>
-            <td class="td2"></td>
-        </tr>
-        <tr>
-            <td class="td"></td>
+            <td class="td"><div class="pawn"></div></td>
         </tr>
         <tr>
             <td class="td2"></td>
@@ -68,6 +62,12 @@
         </tr>
         <tr>
             <td class="td"></td>
+        </tr>
+        <tr>
+            <td class="td2"><div class="pawn1"></div></td>
+        </tr>
+        <tr>
+            <td class="td"><div class="horse1"></div></td>
         </tr>
         <tr>
             <td>B</td>
@@ -78,16 +78,10 @@
             <td>C</td>
         </tr>
         <tr>
-            <td class="td"></td>
+            <td class="td"><div class="elephant"></div></td>
         </tr>
         <tr>
-            <td class="td2"></td>
-        </tr>
-        <tr>
-            <td class="td"></td>
-        </tr>
-        <tr>
-            <td class="td2"></td>
+            <td class="td2"><div class="pawn"></div></td>
         </tr>
         <tr>
             <td class="td"></td>
@@ -100,6 +94,12 @@
         </tr>
         <tr>
             <td class="td2"></td>
+        </tr>
+        <tr>
+            <td class="td"><div class="pawn1"></div></td>
+        </tr>
+        <tr>
+            <td class="td2"><div class="elephant1"></div></td>
         </tr>
         <tr>
             <td>C</td>
@@ -110,16 +110,10 @@
             <td>D</td>
         </tr>
         <tr>
-            <td class="td2"></td>
+            <td class="td2"><div class="queen"></div></td>
         </tr>
         <tr>
-            <td class="td"></td>
-        </tr>
-        <tr>
-            <td class="td2"></td>
-        </tr>
-        <tr>
-            <td class="td"></td>
+            <td class="td"><div class="pawn"></div></td>
         </tr>
         <tr>
             <td class="td2"></td>
@@ -132,6 +126,12 @@
         </tr>
         <tr>
             <td class="td"></td>
+        </tr>
+        <tr>
+            <td class="td2"><div class="pawn1"></div></td>
+        </tr>
+        <tr>
+            <td class="td"><div class="queen1"></div></td>
         </tr>
         <tr>
             <td>D</td>
@@ -142,16 +142,10 @@
             <td>E</td>
         </tr>
         <tr>
-            <td class="td"></td>
+            <td class="td"><div class="king"></div></td>
         </tr>
         <tr>
-            <td class="td2"></td>
-        </tr>
-        <tr>
-            <td class="td"></td>
-        </tr>
-        <tr>
-            <td class="td2"></td>
+            <td class="td2"><div class="pawn"></div></td>
         </tr>
         <tr>
             <td class="td"></td>
@@ -164,6 +158,12 @@
         </tr>
         <tr>
             <td class="td2"></td>
+        </tr>
+        <tr>
+            <td class="td"><div class="pawn1"></div></td>
+        </tr>
+        <tr>
+            <td class="td2"><div class="king1"></div></td>
         </tr>
         <tr>
             <td>E</td>
@@ -174,16 +174,10 @@
             <td>F</td>
         </tr>
         <tr>
-            <td class="td2"></td>
+            <td class="td2"><div class="elephant"></div></td>
         </tr>
         <tr>
-            <td class="td"></td>
-        </tr>
-        <tr>
-            <td class="td2"></td>
-        </tr>
-        <tr>
-            <td class="td"></td>
+            <td class="td"><div class="pawn"></div></td>
         </tr>
         <tr>
             <td class="td2"></td>
@@ -196,6 +190,12 @@
         </tr>
         <tr>
             <td class="td"></td>
+        </tr>
+        <tr>
+            <td class="td2"><div class="pawn1"></div></td>
+        </tr>
+        <tr>
+            <td class="td"><div class="elephant1"></div></td>
         </tr>
         <tr>
             <td>F</td>
@@ -206,16 +206,10 @@
             <td>G</td>
         </tr>
         <tr>
-            <td class="td"></td>
+            <td class="td"><div class="horse"></div></td>
         </tr>
         <tr>
-            <td class="td2"></td>
-        </tr>
-        <tr>
-            <td class="td"></td>
-        </tr>
-        <tr>
-            <td class="td2"></td>
+            <td class="td2"><div class="pawn"></div></td>
         </tr>
         <tr>
             <td class="td"></td>
@@ -228,6 +222,12 @@
         </tr>
         <tr>
             <td class="td2"></td>
+        </tr>
+        <tr>
+            <td class="td"><div class="pawn1"></div></td>
+        </tr>
+        <tr>
+            <td class="td2"><div class="horse1"></div></td>
         </tr>
         <tr>
             <td>G</td>
@@ -238,11 +238,11 @@
             <td>H</td>
         </tr>
         <tr>
-            <td class="td2"></td>
+            <td class="td2"><div class="rook"></div></td>
             <td>8</td>
         </tr>
         <tr>
-            <td class="td"></td>
+            <td class="td"><div class="pawn"></div></td>
             <td>7</td>
         </tr>
         <tr>
@@ -262,11 +262,11 @@
             <td>3</td>
         </tr>
         <tr>
-            <td class="td2"></td>
+            <td class="td2"><div class="pawn1"></div></td>
             <td>2</td>
         </tr>
         <tr>
-            <td class="td"></td>
+            <td class="td"><div class="rook1"></div></td>
             <td>1</td>
         </tr>
         <tr>
