--- a/15.11a/1a/assets/index.html
+++ b/15.11a/1a/assets/index.html
@@ -1,43 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
-       <meta charset="utf-8">
-       <link rel="stylesheet" href="css/css1.css">
-    </head>
-    <body>
-        <header class="header">
-            <div class="one">1</div>
-            <div class="two">2</div>
-             <div class="three">3</div>
-        </header>
-        <hr>
-        <main class="main">
-        <aside class="aside">
-            <div class="four">4</div>
-            <div class="seven">7</div>
-        </aside>
-        <content class="content">
-            <div class="five">5</div>
-            <ul class="ul">
-                <li class="li">6</li>
-                <li class="li">6</li>
-                <li class="li">6</li>
-                <li class="li">6</li>
-                <li class="li">6</li>
-                <li class="li">6</li>
-                <li class="li">6</li>
-            </ul>
-            <div class="eight">8</div>
-            <div class="nine">9</div>
-        </content>
-        </main>
-        <hr>
-        <footer class="footer">
-            <div class="ten">10</div>
-            <div class="eleven">11</div>
-            <div class="twelve">12</div>
-            <div class="thirteen">13</div>
-        </footer>
 
-    </body>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/1.css">
+</head>
+
+<body>
+    <header>
+        <div class="one">1</div>
+        <div class="two">2</div>
+        <div class="three">3</div>
+    </header>
+    <hr>
+    <assid class="aside">
+        <div class="four">4</div>
+        <div class="seven">7</div>
+    </assid>
+    <main class="main">
+        <div class="five">5</div>
+        <ul class="ul">
+            <li class="one1">6</li>
+            <li class="one1">6</li>
+            <li class="one1">6</li>
+            <li class="one1">6</li>
+            <li class="one1">6</li>
+            <li class="one1">6</li>
+            <li class="one1">6</li>
+        </ul>
+
+    </main>
+
+
+</body>
+
 </html>
