--- a/15.11a/2h/index2h.html
+++ b/15.11a/2h/index2h.html
@@ -25,8 +25,11 @@
                     <li>шашки</li>
                 </ul></td>
                 <td class="td3"><h3 class="h3">футбол</h3>
-                <div class="img"></div><p class="p">Футбол &mdash; командный вид спорта, в котором целью является забить мяч в ворота соперника ногами или другими частями тела (кроме рук ) большее количество раз, чем команда соперника.</p><p class="p">Есть 17 официальных правил игры, каждое из которых содержит список оговорок и руководящих принципов. Эти правила предназначены для применения на всех уровнях футбола, хотя есть некоторые изменения для таких групп, как юниоры, взрослые, женщины и люди с ограниченными физическими возможностями. Законы очень часто формулировались в общих чертах, которые позволяют упростить их применения в зависимости от характера игры.</p></td>
-                <div class="img2"></div>
+                 <div class="img"></div>
+                  <p class="p">Футбол &mdash; командный вид спорта, в котором целью является забить мяч в ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда соперника.</p>
+                <p class="p">Есть 17 официальных правил игры, каждое из которых содержит список оговорок и руководящих принципов. Эти правила предназначены для применения на всех уровнях футбола, хотя есть некоторые изменения для таких групп, как юниоры, взрослые, женщины и люди с ограниченными физическими возможностями. Законы очень часто формулировались в общих чертах, которые позволяют упростить их применения в зависимости от характера игры.</p>
+               <div class="img2"></div>
+                </td>
             </tr>
             <tr>
                 <td colspan=2 class="td"><h4 class="h1">главное не победа, а участие!</h4></td>
