--- a/15.11a/2h/index2.3.html
+++ b/15.11a/2h/index2.3.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title>football</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="assets/css/css2.2.css">
-</head>
-  <body>
-    <header>
+    <head>
+        <title>home</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="assets/css/css2.3.css">
+    </head>
+    <body>
+          <header>
         <h1 class="h1">привет участникам сoревнований!</h1>
     </header>
      <main>
@@ -34,6 +33,7 @@
         <footer>
             <h4 class="h4">главное не победа, а участие!</h4>
         </footer>
-    </body>
+            
 
+    </body>
 </html>
