--- a/15.11a/2h/index2h.html
+++ b/15.11a/2h/index2h.html
@@ -13,22 +13,18 @@
             <tr>
                 <td class="td2"><h2 class="h2">Виды спорта:</h2>
                 <ul class="ul">
-                    <li>конькобежный спорт</li>
-                    <li>биатлон</li>
-                    <li>футбол</li>
-                    <li>стрельба из лука</li>
-                    <li>прыжки в длину</li>
-                    <li>прыжки в высоту</li>
-                    <li>фигурное катание</li>
-                    <li>синхронное плавание</li>
-                    <li>шахматы</li>
-                    <li>шашки</li>
+                   <li><a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%8C%D0%BA%D0%BE%D0%B1%D0%B5%D0%B6%D0%BD%D1%8B%D0%B9_%D1%81%D0%BF%D0%BE%D1%80%D1%82#конькобежный спорт">конькобежный спорт<id=#конькобежный спорт></a></li>
+                    <li><a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B8%D0%B0%D1%82%D0%BB%D0%BE%D0%BD#биатлон">биатлон<id=#биатлон></a></li>
+                    <li><a href="https://ru.wikipedia.org/wiki/%D0%A4%D1%83%D1%82%D0%B1%D0%BE%D0%BB#футбол">футбол<id=#футбол></a></li>
+                    <li><a href="https://ru.wikipedia.org/wiki/%D0%A1%D1%82%D1%80%D0%B5%D0%BB%D1%8C%D0%B1%D0%B0_%D0%B8%D0%B7_%D0%BB%D1%83%D0%BA%D0%B0#стрельба из лука"><id=#стрельба из лука>стрельба из лука</a></li>
+                    <li><a href="https://ru.wikipedia.org/wiki/%D0%9F%D1%80%D1%8B%D0%B6%D0%BE%D0%BA_%D0%B2_%D0%B4%D0%BB%D0%B8%D0%BD%D1%83#прыжки в длину">прыжки в длину<id=#прыжки в длину></a></li>
+                    <li><a href="https://ru.wikipedia.org/wiki/%D0%9F%D1%80%D1%8B%D0%B6%D0%BE%D0%BA_%D0%B2_%D0%B2%D1%8B%D1%81%D0%BE%D1%82%D1%83#прыжки в высоту">прыжки в высоту<id=#прыжки в высоту></a></li>
                 </ul></td>
                 <td class="td3"><h3 class="h3">футбол</h3>
-                 <img class="img">
+                 <div class="img"></div>
                   <p class="p">Футбол &mdash; командный вид спорта, в котором целью является забить мяч в ворота соперника ногами или другими частями тела (кроме рук) большее количество раз, чем команда соперника.</p>
                   <p class="p">Есть 17 официальных правил игры, каждое из которых содержит список оговорок и руководящих принципов. Эти правила предназначены для применения на всех уровнях футбола, хотя есть некоторые изменения для таких групп, как юниоры, взрослые, женщины и люди с ограниченными физическими возможностями. Законы очень часто формулировались в общих чертах, которые позволяют упростить их применения в зависимости от характера игры.</p>
-                 <img class="img2">
+                 <div class="img2"></div
                 </td>
             </tr>
             <tr>
