--- a/22.11a/1a/index1a2.html
+++ b/22.11a/1a/index1a2.html
@@ -7,13 +7,13 @@
     </head>
     <body>
         <div>$ bem make</div>
-        <p>Первая сборка с <div class="two">bem tools</div> займет некоторое время, так как именно в этот момент в директорию проекта устанавливаются все необходимые npm-пакеты.</p>
+        <p>Первая сборка с <span>bem tools</span> займет некоторое время, так как именно в этот момент в директорию проекта устанавливаются все необходимые npm-пакеты.</p>
         <p>Для запуска сервера выполняем:</p>
         <div>$ bem server</div>
         <p>В результате вы увидите следующее сообщение:</p>
         <div class="info">info: Server is listening on port 8080. Point your browser to http://Localhost:8080</div>
         <p><strong>Проблема?</strong></p>
-        <p>Если порт 8080 уже используется другой программой, его можно переназначить с помощью аргумента<div class="three">-p.</div></p>
+        <p>Если порт 8080 уже используется другой программой, его можно переназначить с помощью аргумента<span>-p</span>.</p>
 
     </body>
 </html>
