--- a/22.11a/1a/index1a4.html
+++ b/22.11a/1a/index1a4.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-         <meta charset="utf-8">
-        <link rel="stylesheet" href="assets/css/css1a4.css">
-    </head>
-    <body>
-        <table>
-            <tr><td></td></tr>
-            <tr><td>Сайты</td></tr>
-             <tr><td>Онлайн Школы</td></tr>
-              <tr><td>Переводчики</td></tr>
-               <tr><td class="one">Словари</td></tr>
-                <tr><td>Вконтакте</td></tr>
-                 <tr><td>Тесты</td></tr>
-                  <tr><td>Видео курсы</td></tr>
-                   <tr><td>Репетиторы</td></tr>
-        </table>
 
-    </body>
+<head>
+ <meta charset="utf-8">
+ <link rel="stylesheet" href="assets/css/css1a4.css">
+</head>
+
+<body>
+ <table>
+  <tr>
+   <td></td>
+  </tr>
+  <tr>
+   <td>Сайты</td>
+  </tr>
+  <tr>
+   <td>Онлайн Школы</td>
+  </tr>
+  <tr>
+   <td>Переводчики</td>
+  </tr>
+  <tr>
+   <td class="one">Словари</td>
+  </tr>
+  <tr>
+   <td>Вконтакте</td>
+  </tr>
+  <tr>
+   <td>Тесты</td>
+  </tr>
+  <tr>
+   <td>Видео курсы</td>
+  </tr>
+  <tr>
+   <td>Репетиторы</td>
+  </tr>
+ </table>
+
+</body>
+
 </html>
