--- a/22.11a/1a/index1a7.html
+++ b/22.11a/1a/index1a7.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="assets/css/css1a7.css">
-        <link href="https://file.myfontastic.com/gVaggYjQTgwiMopDDnZL7P/ico">
-    </head>
-    <body>
-        <p><strong><br>Распродажа стайлеров</strong><br><br><span class="red">Действует до 06 декабря</span></p>
-        <div>Скидки до<br>12%</div>
 
-    </body>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="assets/css/css1a7.css">
+    <link href="https://file.myfontastic.com/gVaggYjQTgwiMopDDnZL7P/icons.css" rel="stylesheet">
+</head>
+
+<body>
+    <p><strong><br>Распродажа стайлеров</strong><br><br><span class="red">Действует до 06 декабря</span></p>
+    <div>
+        <p class="p1">Скидки до</p>
+        <p class="class">12%</p>
+    </div>
+
+</body>
+
 </html>
