--- a/22.11a/1a/index1a.html
+++ b/22.11a/1a/index1a.html
@@ -11,7 +11,7 @@
     <h1>Волшебные формулы</h1>
     <p>(x+y)&sup3;=x&sup3;+3x&sup2;y+3xy&sup2;+y&sup3;</p>
     <p>&Delta;x<sub>1</sub>+&Delta;x<sub>2</sub>+...&Delta;x<sub>n</sub>=&sum;&Delta;x<sub>k</sub></p>
-    <p>Если &forall; x &isin R такого, что |x|&le;1 &exist; y &ge;1, то &xi;
+    <p>Если &forall; x &isin; R такого, что |x|&le;1 &exist; y &ge;1, то &xi;
         < &infin; </p>
 
 </body>
